src/log/build_2026-04-15_11-26-45/secure_connection/stdout_stderr.log
running egg_info
creating ../build/secure_connection/secure_connection.egg-info
writing ../build/secure_connection/secure_connection.egg-info/PKG-INFO
writing dependency_links to ../build/secure_connection/secure_connection.egg-info/dependency_links.txt
writing requirements to ../build/secure_connection/secure_connection.egg-info/requires.txt
writing top-level names to ../build/secure_connection/secure_connection.egg-info/top_level.txt
writing manifest file '../build/secure_connection/secure_connection.egg-info/SOURCES.txt'
reading manifest file '../build/secure_connection/secure_connection.egg-info/SOURCES.txt'
writing manifest file '../build/secure_connection/secure_connection.egg-info/SOURCES.txt'
running build
running build_py
creating /home/mohamed/ros2_ws/src/build/secure_connection/build
creating /home/mohamed/ros2_ws/src/build/secure_connection/build/lib
creating /home/mohamed/ros2_ws/src/build/secure_connection/build/lib/secure_connection
copying secure_connection/generate_key.py -> /home/mohamed/ros2_ws/src/build/secure_connection/build/lib/secure_connection
copying secure_connection/encrypt.py -> /home/mohamed/ros2_ws/src/build/secure_connection/build/lib/secure_connection
copying secure_connection/test.py -> /home/mohamed/ros2_ws/src/build/secure_connection/build/lib/secure_connection
copying secure_connection/__init__.py -> /home/mohamed/ros2_ws/src/build/secure_connection/build/lib/secure_connection
running install
running install_lib
creating /home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection
copying /home/mohamed/ros2_ws/src/build/secure_connection/build/lib/secure_connection/generate_key.py -> /home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection
copying /home/mohamed/ros2_ws/src/build/secure_connection/build/lib/secure_connection/encrypt.py -> /home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection
copying /home/mohamed/ros2_ws/src/build/secure_connection/build/lib/secure_connection/test.py -> /home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection
copying /home/mohamed/ros2_ws/src/build/secure_connection/build/lib/secure_connection/__init__.py -> /home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection
byte-compiling /home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection/generate_key.py to generate_key.cpython-312.pyc
  File "/home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection/generate_key.py", line 10
    topics =
            ^
SyntaxError: invalid syntax

byte-compiling /home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection/encrypt.py to encrypt.cpython-312.pyc
byte-compiling /home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection/test.py to test.cpython-312.pyc
byte-compiling /home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection/__init__.py to __init__.cpython-312.pyc
running install_data
creating /home/mohamed/ros2_ws/src/install/secure_connection/share/ament_index
creating /home/mohamed/ros2_ws/src/install/secure_connection/share/ament_index/resource_index
creating /home/mohamed/ros2_ws/src/install/secure_connection/share/ament_index/resource_index/packages
copying resource/secure_connection -> /home/mohamed/ros2_ws/src/install/secure_connection/share/ament_index/resource_index/packages
copying package.xml -> /home/mohamed/ros2_ws/src/install/secure_connection/share/secure_connection
running install_egg_info
Copying ../build/secure_connection/secure_connection.egg-info to /home/mohamed/ros2_ws/src/install/secure_connection/lib/python3.12/site-packages/secure_connection-0.0.0-py3.12.egg-info
running install_scripts
writing list of installed files to '/home/mohamed/ros2_ws/src/build/secure_connection/install.log'
